style.css
/* Montserrat font */
@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0px;
  padding: 0px;
  font-family: 'Montserrat', sans-serif;
}

/* Navbar */
nav {
  position: fixed;
  background-color: white;
  height: 60px;
  width: 100vw;
  box-sizing: border-box;
  display: flex;
  flex-flow: row;
  align-items: center;
  z-index: 100;
  justify-content: space-between;
  padding: 0px 60px;
}

#header-logo {
  height: 30px;
}

#nav-links {
  list-style-type: none;
}

.nav-link {
  float: left;
}

.nav-link-a {
  font-weight: bold;
  font-size: 1.2em;
  display: flex;
  align-items: center;
  height: 60px;
  box-sizing: border-box;
  padding: 0px 40px;
  background-color: white;
  text-decoration: none;
  color: #66D3FC;
  clip-path: polygon(20px 0px, 100% 0px, calc(100% - 20px) 100%, 0 100%);
  margin-left: -20px;
  transition: 0.1s ease-in;
}

.nav-link-a:hover, .nav-link-active, #mobile-menu-container .nav-link-active, #mobile-menu-container a:hover {
  color: white;
  background-color: #942492;
}

/* Section 1 */
#about {
  background: linear-gradient(to bottom right, #66D3FC, #68FFEB);
}

#about > div {
  display: flex;
  flex-flow: row;
  align-items: center;
  width: 1080px;
  margin: 0 auto;
}

#abt-txt-div {
  display: inline;
  width: 50%;
  box-sizing: border-box;
  font-weight: bolder;
}

#abt-txt-div > h2 {
  font-size: 2.4em;
  color: #4f5ba3;
}

#abt-txt-div > p {
  font-size: 1.2em;
  width: 80%;
  color: #942492
}

#about img {
  width: 50%;
  box-sizing: border-box;
}

#man-button-cont {
  text-align: center;
}

#std-man-button {
  display: inline-block;
  box-sizing: border-box;
  padding: 15px 20px;
  border-radius: 8px;
  font-weight: bold;
  font-size: 1.1em;
  background-color: #942492;
  color: white;
  text-decoration: none;
  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.3);
  transition: 0.1s ease-in;
}

#std-man-button:hover {
  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.5);
}

/* slide arrows */
.fp-controlArrow {
  border-color: #942492!important;
  margin-top: -20.5px!important;
  transition: 0.1s ease-in;
}

.fp-controlArrow:hover {
  transform: scale(1.2, 1.2);
}

.fp-prev {
  clip-path: polygon(65% 0, 100% 0, 35% 50%, 100% 100%, 65% 100%, 0 50%);
  border-width: 20.5px 24px 20.5px 0!important;
}

.fp-next {
  clip-path: polygon(0 0, 35% 0, 100% 50%, 35% 100%, 0 100%, 65% 50%);
  border-width: 20.5px 0 20.5px 24px!important;
}



/* Slide elements */
.slide-child {
  display: flex;
  flex-flow: row;
  align-items: center;
  width: 1080px;
  margin: 0 auto;
}

/* Projects slide 1 */
#gears-container {
  background: url('assets/gears-bg.png') no-repeat center;
  background-size: 100% 100%;
  width: 400px;
  height: 400px;
  width: border-box;
  position: relative;
}

#gears-container > div {
  position: absolute;
}

#gearbox-1 {
  top:5%;
  left:0;
  width: 55%;
  height: 55%;
}

#gearbox-2 {
  top:40%;
  left:50%;
  width: 40%;
  height: 40%;
}

#gearbox-3 {
  top:60%;
  left:25%;
  width: 25%;
  height: 25%;
}

#pipe1, #pipe2, #pipe3 {
  width: 70%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#gear1, #gear2, #gear3 {
  width: 100%;
}

#gear1 {
  animation: clockwise 5s infinite linear;
}

#gear2 {
  animation: clockwise 4s infinite linear reverse;
}

#gear3 {
  animation: clockwise 2.5s infinite linear;
}

#gearbox-1 > img, #gearbox-2 > img, #gearbox-3 > img {
  position: absolute;
}

/* #gear1 {
  width: 225px;
  top: 50px;
  left: 50px;
  animation: clockwise 6s infinite linear;
} */

@keyframes clockwise {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

#projects-1 {
  width: 600px;
  padding-left: 30px;
}

/* Projects card container */
.projects {
  display: flex;
  flex-wrap: wrap;
  align-content: space-around;
  justify-content: center;
}

.card {
  width: 40%;
  box-sizing: border-box;
  display: block;
  background-color: #66D3FC;
  margin: 10px;
  padding: 15px 20px;
  border-radius: 15px;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
  color: #4f5ba3;
  font-weight: bold;
  transition: 0.1s ease-in;
  text-decoration: none;
}

.card:hover {
  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
}

.card-title {
  font-size: 1.4em;
  text-align: center;
  height: 2.8em;
  margin: 0px;
}

.heading-height {
  height: 5.4rem;
} 

.card-description {
  font-size: 1em;
  line-height: 1.2em;
  max-height: 7.2em;
  margin-bottom: 5px;
  margin-top: 2px;
  overflow: hidden;
}

#projects-2 > .card {
  width: 30%;
}

/* Responsive Menu */
#mobile-menu-button {
  display: none;
  text-align: center;
  font-size: 40px!important;
  color: #66D3FC;
}

#mobile-menu-button:hover {
  cursor: pointer;
}

#mobile-menu-container {
  position: fixed;
  top: 60px;
  z-index: 100;
  display: block;
  background-color: rgba(255, 255, 255, 0.9);
  width: 100vw;
  height: 0px;
  transition: 0.15s ease-in;
  overflow: hidden;
}

.visible {
  height: 340px!important;
}

#mobile-menu-shadow {
  top: 0;
  left: 0;
  position: fixed;
  height: 100vh;
  width: 100vw;
  background-color: rgba(0, 0, 0, 0);
  z-index: -1;
  transition: 0.1s ease-in;
}

.shadow-visible {
  background-color: rgba(0, 0, 0, 0.8)!important;
  z-index: 50!important;
}

#mobile-menu-container > a {
  display: block;
  padding: 20px 20px;
  font-size: 1.4em;
  color: #66D3FC;
  font-weight: bold;
  text-decoration: none;
  transition: 0.1s ease-in;
}

#mobile-menu-container > a:hover {
  background-color: #942492;
  color: white;
}

footer {
  text-align: center;
  margin: 10px;
  font-weight: bold;
  color: #942492;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  bottom: 20px;
}

footer > #love-icon {
  color: red;
  animation: 1.25s heartbeat infinite;
}

@keyframes heartbeat {
  0% {
    transform: scale(1);
  }
  25% {
    transform: scale(1);
  }
  40% {
    transform: scale(1.2);
  }
  55% {
    transform: scale(1);
  }
  70% {
    transform: scale(1.2);
  }
  85% {
    transform: scale(1);
  }
  100% {
    transform: scale(1);
  }
}

footer > a {
  text-decoration: none;
  color: #4f5ba3;
  display: inline-block;
  border-bottom: 1px dotted #4f5ba3;
}

@media screen and (max-width: 1110px) {
  .slide-child {
    width: 100%;
    justify-content: center;
  }

  #about > div {
    width: 95%;
  }

  #abt-txt-div > h2 {
    font-size: 2em;
  }
  
  #abt-txt-div > p {
    font-size: 1.2em;
  }
}

@media screen and (max-width: 832px) {
  #nav-links {
    display: none;
  }

  #mobile-menu-button {
    display: initial;
  }

  nav {
    padding: 0px 20px;
  }
  
  /* Section 1 */
  #about {
    position: initial;
  }

  #about > div {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap-reverse;
    align-items: initial;
    justify-content: center;
    width: calc(100% - 20px);
    margin: 0 auto;
    height: max-content!important;
    margin-top: 60px;
    padding: 20px;
    box-sizing: border-box;
  }

  #abt-txt-div {
    width: 100%;
  }

  #abt-txt-div p, #abt-txt-div h2 {
    width: 100%;
  }

  #about img {
    width: 100%;
    max-width: 400px;
    height: 100%;
  }

  .slide-child {
    flex-wrap: wrap;
    width: 100%;
    align-content: center;
    justify-content: center;
  }

  #projects-1, #projects-2 {
    width: 100%;
    padding: 0px;
    justify-content: center;
  }

  #projects-2 > .card {
    width: 40%;
    box-sizing: border-box;
  }

  footer {
    position: initial!important;
    transform: none;
    margin: 20px;
  }
}

@media screen and (max-width: 460px) {
  .card, #projects-2 > .card {
    width: 100%;
  }

  #gears-container {
    margin-top: 30px;
    width: 80vw;
    height: 80vw;
  }
}

